--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,8 +5,8 @@ header{
 }
 header svg {
     display: block;
-    height: 60px;
-    width: 60px;
+    height: 40px;
+    width: auto;
     margin: 0 auto;
 }
 
