--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <header role="banner" aria-label="Application Header">
-  <svg width="31.431mm" height="31.431mm" aria-labelledby="logoTitle" version="1.1" viewBox="0 0 31.430231 31.430231" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
-    <title id="logoTitle">Planrr Logo</title>
-    <g>
-      <path d="m22.766 3.7651c-2.1486 0.32331-4.2198 0.80451-5.7552 1.5296-5.1616 2.4376-6.2363 4.0411-6.2363 4.0411h17.278a13.891 13.891 0 0 0 -5.286 -5.5707z" fill="#f2a600"/>
-      <path d="m6.5361 17.155s-2.9745 3.4031-2.9745 4.7191 8.2574 4.5894 8.2574 4.5894h8.7519s1.0198-1.8995 2.9895-3.1848c1.3264-0.8656 3.3021-1.0952 4.4648-1.1555a13.891 13.891 0 0 0 1.5022 -4.9682z" fill="#f2a600"/>
-      <path d="m30.901 15.715a15.186 15.186 0 0 1 -15.186 15.186 15.186 15.186 0 0 1 -15.186 -15.186 15.186 15.186 0 0 1 15.186 -15.186 15.186 15.186 0 0 1 15.186 15.186z" fill="none" stroke="#013a58" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.0583"/>
-      <text x="11.945596" y="19.756598" fill="#013a58" font-family="sans-serif" font-size="15.852px" letter-spacing="0px" stroke-width=".39629" word-spacing="0px" style="line-height:1.25" xml:space="preserve"><tspan x="11.945596" y="19.756598" dx="0" fill="#013a58" font-family="BritishRailDarkNormal" letter-spacing="0px" stroke-width=".39629">P</tspan></text>
-    </g>
-  </svg>
+    <svg width="64.732mm" height="23.345mm" version="1.1" viewBox="0 0 64.731995 23.344908" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
+      <g transform="translate(92.842 -137.16)">
+        <path d="m-79.397 139.33c5.1616-2.4376 16.347-2.1595 16.347-2.1595v6.2007h-22.584s1.075-1.6036 6.2366-4.0412z" fill="#f2a600"/>
+        <path d="m-89.867 151.2h61.757l-8.7775 4.9462h-30.538s-3.4479-0.10804-5.4175 1.1773-2.9893 3.1847-2.9893 3.1847h-8.752s-8.2573-3.2729-8.2573-4.5889 2.9747-4.7193 2.9747-4.7193z" fill="#f2a600"/>
+        <text x="-84.45739" y="153.79601" fill="#013a58" font-family="sans-serif" font-size="15.852px" letter-spacing="0px" stroke-width=".39629" word-spacing="0px" style="line-height:1.25" xml:space="preserve"><tspan x="-84.45739" y="153.79601" dx="0" fill="#013a58" font-family="BritishRailDarkNormal" letter-spacing="0px" stroke-width=".39629">Planrr</tspan></text>
+      </g>
+    </svg>
+    
+ 
 </header>
 
 <router-outlet></router-outlet>
