--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,35 @@ header svg {
     display: block;
     height: 40px;
     width: auto;
-    margin: 0 auto;
+    margin: 0 auto 0 auto;
+}
+
+header.loading .track{
+  width: 100%;
+  margin-top: 5px;
+  
+}
+header.loading svg{
+  animation-name: loadingTrain;
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-delay: 1s;
+}
+
+@keyframes loadingTrain {
+  0% {
+    transform: translate(0px, 0px);
+    }
+  45% {
+    transform: translate(-400px, 0px);
+    }
+  46% {
+    transform: translate(400px, 0px);
+    }
+  95% {
+    transform: translate(0px, 0px);
+    }
 }
 
 footer{
