--- a/src/app/station-board/station-board.component.html
+++ b/src/app/station-board/station-board.component.html
@@ -1,21 +1,21 @@
 <main role="main">
   <header>
-    <h2>Dundee</h2>
-    <h6>Live Departures</h6>
-    <a href="#" class="active">Departures</a>
-    <a href="#">Arrival</a>
+    <h2>{{crs}}</h2>
+    <h6>Live {{direction | titlecase}}</h6>
+    <a href="#" [class.active]="direction == 'departures'" [routerLink]="['/station', crs, 'departures']">Departures</a>
+    <a href="#" [class.active]="direction == 'arrivals'" [routerLink]="['/station', crs, 'arrivals']">Arrivals</a>
   </header>
   <table *ngIf="stationBoard.length > 0" tabindex="0">
     <tbody>
       <tr *ngFor="let item of stationBoard; index as i" [class.cancelled]="item.cancelled" tabindex="{{i + 1}}">
         <td class="time">
           <span *ngIf="item.cancelled">Cancelled</span>
-          <div *ngIf="item.isLate">{{item.predictedArrival}}</div>
-          <div *ngIf="!item.isLate">{{item.publicArrival}}</div>
-          <del *ngIf="item.isLate">{{item.publicArrival}}</del>
+          <div *ngIf="item.isLate">{{item.predictedTime}}</div>
+          <div *ngIf="!item.isLate">{{item.publicTime}}</div>
+          <del *ngIf="item.isLate">{{item.publicTime}}</del>
         </td>
         <td class="direction">
-          <span>to</span>
+          <span>{{notion}}</span>
         </td>
         <td class="location">
           <div>{{item.location}}</div>
