--- a/src/app/station-board/station-board.component.html
+++ b/src/app/station-board/station-board.component.html
@@ -5,25 +5,25 @@
     <a href="#" [class.active]="direction == 'departures'" [routerLink]="['/station', crs, 'departures']">Departures</a>
     <a href="#" [class.active]="direction == 'arrivals'" [routerLink]="['/station', crs, 'arrivals']">Arrivals</a>
   </header>
-  <table *ngIf="stationBoard.length > 0" tabindex="0">
+  <table *ngIf="stationBoard.length > 0" tabindex="0" [class.loading]="_loading">
     <tbody>
       <tr *ngFor="let item of stationBoard; index as i" [class.cancelled]="item.cancelled" tabindex="{{i + 1}}">
         <td class="time">
           <span *ngIf="item.cancelled">Cancelled</span>
-          <div *ngIf="item.isLate">{{item.predictedTime}}</div>
-          <div *ngIf="!item.isLate">{{item.publicTime}}</div>
-          <del *ngIf="item.isLate">{{item.publicTime}}</del>
+          <div *ngIf="item.isLate"><span>{{item.predictedTime}}</span></div>
+          <div *ngIf="!item.isLate"><span>{{item.publicTime}}</span></div>
+          <del *ngIf="item.isLate"><span>{{item.publicTime}}</span></del>
         </td>
         <td class="direction">
           <span>{{notion}}</span>
         </td>
         <td class="location">
-          <div>{{item.location}}</div>
-          <small *ngIf="item.isBus">{{item.busType}}</small>
+          <div><span>{{item.location}}</span></div>
+          <small *ngIf="item.isBus"><span>{{item.busType}}</span></small>
         </td>
-        <td class="operator">{{item.operator}}</td>
-        <td class="platform" *ngIf="item.isBus">BUS</td>
-        <td class="platform" *ngIf="!item.isBus">Platform&nbsp;{{item.platform}}</td>
+        <td class="operator"><span>{{item.operator}}</span></td>
+        <td class="platform" *ngIf="item.isBus"><span>BUS</span></td>
+        <td class="platform" *ngIf="!item.isBus"><span>Platform&nbsp;{{item.platform}}</span></td>
       </tr>
     </tbody>
   </table>
