--- a/src/app/station-board/station-board.component.css
+++ b/src/app/station-board/station-board.component.css
@@ -40,6 +40,7 @@ table{
 tr{
   border-bottom: 1px solid #dddddd;
   vertical-align: top;
+  height: 50px;
 }
 tr:hover,
 tr:focus{
@@ -48,7 +49,6 @@ tr:focus{
 
 td{
     padding: 10px 5px;
-    font-size: 0.8em;
 }
 td.direction{
   font-size: 0.5em;
@@ -63,7 +63,7 @@ td.operator{
   padding: 12px 5px;
 }
 td.location small{
-  font-size: 0.6em;
+  font-size: 0.7em;
   font-weight: normal;
   line-height: 8px;
   display: inline-block;
