--- a/src/app/station-board/station-board.component.css
+++ b/src/app/station-board/station-board.component.css
@@ -36,14 +36,18 @@ table{
   border-collapse: collapse;
   font-size: 0.9em;
 }
-
-tr{
+table a{
+  display: table-row;
+  width: 100%;
+  text-decoration: none;
+  color: black;
   border-bottom: 1px solid #dddddd;
   vertical-align: top;
   height: 50px;
+  width: 100%;
 }
-tr:hover,
-tr:focus{
+a:hover,
+a:focus{
   background: #f5f5f5;
 }
 
@@ -77,7 +81,7 @@ td del{
   font-size: 0.75em;
   margin-left: 1px;
 }
-tr.cancelled{
+a.cancelled{
   background: #faeceb;
   font-weight: bold;
   color: #770000;
