--- a/src/app/journey-page/journey-page.component.html
+++ b/src/app/journey-page/journey-page.component.html
@@ -1,2 +1,2 @@
-<app-header></app-header>
-<app-journey></app-journey>
+<app-header [loading]="loading"></app-header>
+<app-journey (loading)="onLoading($event)"></app-journey>
