--- a/src/app/components/journey/journey.component.html
+++ b/src/app/components/journey/journey.component.html
@@ -4,6 +4,11 @@
       <h3>Scotrail Service</h3>
   </header>
   <section>
+    <div id="progressMapPreload">
+      <div class="origin"></div>
+      <div class="intermediate"></div>
+      <div class="destination"></div>
+    </div>
     <table [class.loading]="_loading">
       <thead>
         <tr>
