Disable codes in auto complete

--- a/src/app/components/journey-search/journey-search.component.css
+++ b/src/app/components/journey-search/journey-search.component.css
@@ -36,6 +36,9 @@
   padding: 10px 30px;
   border-bottom: 1px solid #dddddd;
 }
+#autocomplete span.crs{
+  font-weight: bold;
+}
 #autocomplete li:hover,
 #autocomplete li:focus{
   background: #dddddd;
