--- a/src/app/components/station-board/station-board.component.css
+++ b/src/app/components/station-board/station-board.component.css
@@ -50,7 +50,12 @@ a:hover,
 a:focus{
   background: #f5f5f5;
 }
-
+tr{
+  cursor: pointer;
+}
+tr:nth-child(even) {
+  background: #eee;
+}
 td{
     padding: 10px 5px;
 }
