--- a/src/app/components/station-board/station-board.component.html
+++ b/src/app/components/station-board/station-board.component.html
@@ -7,7 +7,7 @@
   </header>
   <table *ngIf="stationBoard.length > 0" tabindex="0" [class.loading]="_loading">
     <tbody>
-      <tr href="#" role="link" [routerLink]="['/train', item.uid, year, month, day]" *ngFor="let item of stationBoard; index as i" [class.cancelled]="item.cancelled" tabindex="{{i + 1}}">
+      <tr href="#" role="link" [routerLink]="['/train', item.uid, year, month, day]" *ngFor="let item of stationBoard; index as i" [class.cancelled]="item.isCancelled" tabindex="{{i + 1}}">
           <td class="time">
             <span *ngIf="item.isCancelled">Cancelled</span>
             <div *ngIf="item.isLate"><span>{{item.predictedTime}}</span></div>
@@ -21,7 +21,7 @@
             <div><span>{{item.location}}</span></div>
             <small *ngIf="item.isBus"><span>XXXXXX</span></small>
           </td>
-          <td class="operator"><span>{{item.operator}}</span></td>
+          <td class="operator"><span>{{item.operator | operator}}</span></td>
           <td class="platform" *ngIf="item.isBus"><span>BUS</span></td>
           <td class="platform" *ngIf="!item.isBus"><span>Platform&nbsp;{{item.platform}}</span></td>
         </tr>
