--- a/src/app/components/journey/journey.component.html
+++ b/src/app/components/journey/journey.component.html
@@ -29,18 +29,18 @@
       </thead>
       <tbody>
         <tr *ngFor="let record of schedule.locations; first as isFirst; last as isLast"
-          [class.calledAt]="!record.calledAt"
+
           [class.late]="record.isLate"
           [class.early]="record.isEarly"
           >
           <td class="progress" [class.origin]="isFirst" [class.destination]="isLast"></td>
-          <td class="location"><a href=""><span>{{record.location}}</span></a></td>
+          <td class="location"><a href=""><span>{{record.station.name}}</span></a></td>
           <td><span>{{record.platform}}</span></td>
           <td class="border-left wwt"><span>{{record.publicArrival}}</span></td>
           <td class="wwt"><span>{{record.publicDeparture}}</span></td>
-          <td class="border-left realtime"><span>{{record.predictedArrival}}</span></td>
-          <td class="realtime"><span>{{record.predictedDeparture}}</span></td>
-          <td class="realtime"><span *ngIf="record.calledAt" class="status">{{record.status}}</span></td>
+          <td class="border-left realtime"><span [class.calledAt]="record.actualArrival !== null">{{record.realtimeArrival}}</span></td>
+          <td class="realtime"><span [class.calledAt]="record.actualDeparture !== null">{{record.realtimeDeparture}}</span></td>
+          <td class="realtime"><span *ngIf="record.actualDeparture !== null" class="status">{{record.status}}</span></td>
         </tr>
       </tbody>
     </table>
