--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,4 +9,7 @@
       <text x="40.560932" y="23.338408" fill="#a7a7a7" fill-opacity=".98824" font-family="sans-serif" font-size="5.5721px" letter-spacing="0px" stroke-width=".1393" word-spacing="0px" style="line-height:1.25" xml:space="preserve"><tspan x="40.560932" y="23.338408" fill="#a7a7a7" fill-opacity=".98824" font-family="Arial, Helvetica, sans-serif" font-weight="bolder" letter-spacing="0px" stroke-width=".2393">BETA</tspan></text>
     </svg>
   </a>
+  <section class="warning">
+    This is a unstable release of this application. Bugs and errors should be expected. Always verify with in station information boards.
+  </section>
 </header>
