Beta release message

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,6 +10,6 @@
     </svg>
   </a>
   <section class="warning">
-    This is a unstable release of this application. Bugs and errors should be expected. Always verify with in station information boards.
+    This is a beta release, always verify with in station information boards.
   </section>
 </header>
