--- a/src/app/components/station-board/station-board.component.css
+++ b/src/app/components/station-board/station-board.component.css
@@ -73,13 +73,17 @@ td.location{
   font-weight: bold;
   width: 60%;
 }
-td.location span.bold{
+td.location span.late{
   font-weight: bold;
+  background: #363633;
+  color: #ff9933;
+  padding: 1px 2px;
 }
 td.operator{
   font-size: 0.6em;
   text-align: right;
   padding: 12px 5px;
+  width: 25%;
 }
 td.location small{
   font-size: 0.7em;
